src/objects/Alert__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Type__c</fullName>
        <label>Alert Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert__c</fullName>
        <label>Alert</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Alert_ID__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Alert ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prospect_Customer__c</fullName>
        <label>Prospect/Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Alert</label>
    <nameField>
        <label>Alert</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <recordTypes>
        <fullName>FCU_Alerts</fullName>
        <active>true</active>
        <description>To be only used by FCU to add Security Alerts</description>
        <label>FCU Alerts</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_FCU_Alerts</fullName>
        <active>true</active>
        <description>Ability to access alerts (not FCU security alerts)</description>
        <label>Non FCU Alerts</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>